--- a/sample/src/autocomplete/customizing-templates.html
+++ b/sample/src/autocomplete/customizing-templates.html
@@ -10,19 +10,14 @@
                     <li>Code</li>
                 </ul>
                 <div>
-                    <textarea au-markdown>
-```
-```
-                    </textarea>
+                    <au-code language="markup">
+                    </au-code>
                 </div>
                 <div>
-                    <textarea au-markdown>
-```
-
-```
-                    </textarea>
+                    <au-code language="javascript">
+                    </au-code>
                 </div>
             </div>
-        </collapse-panel>        
+        </collapse-panel>
     </section>
 </template>
