--- a/sample/src/button/basic-use.html
+++ b/sample/src/button/basic-use.html
@@ -12,21 +12,17 @@
                     <li>Code</li>
                 </ul>
                 <div>
-                    <textarea au-markdown>
-```
-<button au-kendo-button class="k-primary">Primary Button</button>
-<button au-kendo-button>Button</button>
-```
-                    </textarea>
-                </div>
+                    <au-code language="markup">
+                        <button au-kendo-button class="k-primary">Primary Button</button>
+                        <button au-kendo-button>Button</button>
+                    </au-code>
+
                 <div>
-                    <textarea au-markdown>
-```
-export class BasicUse {
-    
-}
-```
-                    </textarea>
+                    <au-code language="javascript">
+                        export class BasicUse {
+
+                        }
+                    </au-code>
                 </div>
             </div>
         </collapse-panel>
