--- a/sample/src/combobox/cascading-combobox.html
+++ b/sample/src/combobox/cascading-combobox.html
@@ -10,19 +10,14 @@
                     <li>Code</li>
                 </ul>
                 <div>
-                    <textarea au-markdown>
-```
-```
-                    </textarea>
-                </div>
-                <div>
-                    <textarea au-markdown>
-```
+                    <au-code language="markup">
+                    </au-code>
+                </div
 
-```
-                    </textarea>
-                </div>
-            </div>
-        </collapse-panel>        
+                <div>
+                    <au-code language="javascript">
+                    </au-code>
+                </div
+        </collapse-panel>
     </section>
 </template>
