--- a/sample/src/grid/html-config.html
+++ b/sample/src/grid/html-config.html
@@ -10,18 +10,14 @@
                     <li class="k-state-active">HTML</li>
                     <li>Code</li>
                 </ul>
-                <div>
-                    <textarea au-markdown>
-```
-```
-                    </textarea>
-                </div>
-                <div>
-                    <textarea au-markdown>
-```
+                 <div>
+                    <au-code language="markup">
+                    </au-code>
+                </div
 
-```
-                    </textarea>
+                <div>
+                    <au-code language="javascript">
+                    </au-code>
                 </div>
             </div>
         </collapse-panel>
