--- a/sample/src/scheduler/api.html
+++ b/sample/src/scheduler/api.html
@@ -12,19 +12,16 @@
                     <li>Code</li>
                 </ul>
                 <div>
-                    <textarea au-markdown>
-```
-
-```
-                    </textarea>
-                </div>
                 <div>
-                    <textarea au-markdown>
-```
+                    <au-code language="markup">
+                    </au-code>
+                </div
 
-```
-                    </textarea>
+                <div>
+                    <au-code language="javascript">
+                    </au-code>
                 </div>
+
             </div>
         </collapse-panel>
 
