--- a/sample/src/toolbar/customizing-with-editors.html
+++ b/sample/src/toolbar/customizing-with-editors.html
@@ -11,20 +11,16 @@
                     <li>Code</li>
                 </ul>
                 <div>
-                    <textarea au-markdown>
-```
+                    <au-code language="markup">
+                    </au-code>
+                </div
 
-```
-                    </textarea>
-                </div>
                 <div>
-                    <textarea au-markdown>
-```
-
-```
-                    </textarea>
+                    <au-code language="javascript">
+                    </au-code>
                 </div>
+
             </div>
-        </collapse-panel>        
+        </collapse-panel>
     </section>
 </template>
