--- a/sample/src/combobox/grouping.html
+++ b/sample/src/combobox/grouping.html
@@ -9,20 +9,16 @@
                     <li class="k-state-active">HTML</li>
                     <li>Code</li>
                 </ul>
-                <div>
-                    <textarea au-markdown>
-```
-```
-                    </textarea>
-                </div>
-                <div>
-                    <textarea au-markdown>
-```
+                 <div>
+                    <au-code language="markup">
+                    </au-code>
+                </div
 
-```
-                    </textarea>
+                <div>
+                    <au-code language="javascript">
+                    </au-code>
                 </div>
             </div>
-        </collapse-panel>        
+        </collapse-panel>
     </section>
 </template>
