--- a/sample/src/combobox/server-filtering.html
+++ b/sample/src/combobox/server-filtering.html
@@ -10,19 +10,15 @@
                     <li>Code</li>
                 </ul>
                 <div>
-                    <textarea au-markdown>
-```
-```
-                    </textarea>
-                </div>
-                <div>
-                    <textarea au-markdown>
-```
+                    <au-code language="markup">
+                    </au-code>
+                </div
 
-```
-                    </textarea>
-                </div>
+                <div>
+                    <au-code language="javascript">
+                    </au-code>
+                </div
             </div>
-        </collapse-panel>        
+        </collapse-panel>
     </section>
 </template>
