--- a/sample/src/toolbar/basic-use.html
+++ b/sample/src/toolbar/basic-use.html
@@ -10,20 +10,16 @@
                     <li class="k-state-active">HTML</li>
                     <li>Code</li>
                 </ul>
-                <div>
-                    <textarea au-markdown>
-```
+                 <div>
+                    <au-code language="markup">
+                    </au-code>
+                </div
 
-```
-                    </textarea>
-                </div>
                 <div>
-                    <textarea au-markdown>
-```
-
-```
-                    </textarea>
+                    <au-code language="javascript">
+                    </au-code>
                 </div>
+
             </div>
         </collapse-panel>
     </section>
