fix(sample): fix typo's

--- a/sample/src/button/basic-use.html
+++ b/sample/src/button/basic-use.html
@@ -16,6 +16,7 @@
                         <button au-kendo-button class="k-primary">Primary Button</button>
                         <button au-kendo-button>Button</button>
                     </au-code>
+                </div>
 
                 <div>
                     <au-code language="javascript">
