--- a/sample/src/grid/html-config.html
+++ b/sample/src/grid/html-config.html
@@ -13,7 +13,7 @@
                  <div>
                     <au-code language="markup">
                     </au-code>
-                </div
+                </div>
 
                 <div>
                     <au-code language="javascript">
@@ -23,4 +23,3 @@
         </collapse-panel>
     </section>
 </template>
-
