--- a/sample/src/grid/virtualization-of-remote-data.html
+++ b/sample/src/grid/virtualization-of-remote-data.html
@@ -12,7 +12,7 @@
                  <div>
                     <au-code language="markup">
                     </au-code>
-                </div
+                </div>
 
                 <div>
                     <au-code language="javascript">
