--- a/sample/src/scheduler/api.html
+++ b/sample/src/scheduler/api.html
@@ -15,7 +15,7 @@
                 <div>
                     <au-code language="markup">
                     </au-code>
-                </div
+                </div>
 
                 <div>
                     <au-code language="javascript">
