fix(sample): fixed sample codes

--- a/sample/src/installation-wizard/instructions.html
+++ b/sample/src/installation-wizard/instructions.html
@@ -10,12 +10,10 @@
 
 
   <p>${lastStep + 1}. Now let's open up "app.html" and load Kendo's CSS files</p>
-  <textarea au-markdown>
-```
-<require from="kendo-ui/styles/kendo.common.core.min.css"></require>
-<require from="kendo-ui/styles/kendo.bootstrap.min.css"></require>
-```
-  </textarea>
+  <au-code language="markup">
+&lt;require from="kendo-ui/styles/kendo.common.core.min.css"></require>
+&lt;require from="kendo-ui/styles/kendo.bootstrap.min.css"></require>
+  </au-code>
 
   <h2>You are done!</h2>
   <p>
