--- a/sample/src/installation-wizard/vendors-instructions.html
+++ b/sample/src/installation-wizard/vendors-instructions.html
@@ -4,36 +4,32 @@
   <p>3. Extract the "js" and "styles" folder into the "vendors" folder</p>
   <p>4. Open "config.js" and add a path mapping from "kendo-ui/*" to "vendors/*" </p>
 
-  <textarea au-markdown>
-```
+  <au-code language="markup">
 paths: {
 "*": "dist/*",
 "github:*": "jspm_packages/github/*",
 "npm:*": "jspm_packages/npm/*",
 "kendo-ui/*": "vendors/*"
 }
-```
-  </textarea>
+  </au-code>
 
 
   <p>5. Install the plugin</p>
-  <textarea au-markdown>
+  <au-markdown>
 `jspm install aurelia-kendoui-plugin`
-  </textarea>
+  </au-markdown>
 
   <p>6. Register the plugin</p>
   <p>
     Now we're going to register the plugin with Aurelia in your "main.js" or equivalent. The configuration function will be passed a builder object that you can use to configure which Kendo controls you wish to use. You can use all controls in Kendo UI Pro by calling the "pro()" method
   </p>
 
-  <textarea au-markdown>
-```
+  <au-code language="javascript">
 export function configure(aurelia) {
   aurelia.use
     .standardConfiguration()
     .developmentLogging()
     .plugin('aurelia-kendoui-plugin', (kendo) => kendo.pro());
 }
-```
-  </textarea>
+  </au-code>
 </template>
