fix(installation-wizard): fix <require> not showing

--- a/sample/src/installation-wizard/instructions.html
+++ b/sample/src/installation-wizard/instructions.html
@@ -10,10 +10,12 @@
 
 
   <p>${lastStep + 1}. Now let's open up "app.html" and load Kendo's CSS files</p>
-  <au-code language="markup">
-&lt;require from="kendo-ui/styles/kendo.common.core.min.css"></require>
-&lt;require from="kendo-ui/styles/kendo.bootstrap.min.css"></require>
-  </au-code>
+  <pre>
+    <code>
+&lt;require from=&quot;kendo-ui/styles/kendo.common.core.min.css&quot;&gt;&lt;/require&gt;
+&lt;require from=&quot;kendo-ui/styles/kendo.bootstrap.min.css&quot;&gt;&lt;/require&gt;
+    </code>
+  </pre>
 
   <h2>You are done!</h2>
   <p>
