--- a/sample/src/menu/basic-use.html
+++ b/sample/src/menu/basic-use.html
@@ -98,6 +98,7 @@
                 <ul>
                     <li class="k-state-active">HTML</li>
                     <li>Code</li>
+                    <li>CSS</li>
                 </ul>
 
                 <div>
@@ -192,44 +193,6 @@
                 </li>
               </ul>
             </div>
-
-            <style>
-              #megaStore {
-                  max-width: 600px;
-                  margin: 30px auto;
-                  padding-top: 120px;
-                  background: url('http://demos.telerik.com/kendo-ui/content/web/menu/header.jpg') no-repeat center 0;
-              }
-              #menu h2 {
-                  font-size: 1em;
-                  text-transform: uppercase;
-                  padding: 5px 10px;
-              }
-              #template img {
-                  margin: 5px 20px 0 0;
-                  float: left;
-              }
-              #template {
-                  width: 380px;
-              }
-              #template ol {
-                  float: left;
-                  margin: 0 0 0 30px;
-                  padding: 10px 10px 0 10px;
-              }
-              #template:after {
-                  content: ".";
-                  display: block;
-                  height: 0;
-                  clear: both;
-                  visibility: hidden;
-              }
-              #template .k-button {
-                  float: left;
-                  clear: left;
-                  margin: 5px 0 5px 12px;
-              }
-          </style>
           </au-kendo-menu>
                   </au-code>
                 </div>
@@ -240,6 +203,46 @@
                     }
                   </au-code>
                 </div>
+
+                <div>
+                  <au-code language="css">
+                    #megaStore {
+                        max-width: 600px;
+                        margin: 30px auto;
+                        padding-top: 120px;
+                        background: url('http://demos.telerik.com/kendo-ui/content/web/menu/header.jpg') no-repeat center 0;
+                    }
+                    #menu h2 {
+                        font-size: 1em;
+                        text-transform: uppercase;
+                        padding: 5px 10px;
+                    }
+                    #template img {
+                        margin: 5px 20px 0 0;
+                        float: left;
+                    }
+                    #template {
+                        width: 380px;
+                    }
+                    #template ol {
+                        float: left;
+                        margin: 0 0 0 30px;
+                        padding: 10px 10px 0 10px;
+                    }
+                    #template:after {
+                        content: ".";
+                        display: block;
+                        height: 0;
+                        clear: both;
+                        visibility: hidden;
+                    }
+                    #template .k-button {
+                        float: left;
+                        clear: left;
+                        margin: 5px 0 5px 12px;
+                    }
+              </au-code>
+            </div>
             </div>
         </collapse-panel>
 
