feat(all): templating

--- a/sample/src/grid/basic-use.html
+++ b/sample/src/grid/basic-use.html
@@ -3,7 +3,7 @@
         <collapse-panel title="Basic use" allow-collapse.bind="false">
 <au-kendo-grid data-source.bind="datasource" auto-bind.bind="false" pageable.bind="true" sortable.bind="true">
   <au-kendo-grid-col title="Contact Name" field="ContactName">
-    <div class='customer-photo' css="background-image: url(http://demos.telerik.com/kendo-ui/content/web/Customers/${$item.CustomerID}.jpg);"></div>
+    <div class='customer-photo' css="background-image: url(http://demos.telerik.com/kendo-ui/content/web/Customers/${CustomerID}.jpg);"></div>
     <div class='customer-name'>${ContactName}</div>
   </au-kendo-grid-col>
   <au-kendo-grid-col title="Contact Name" field="ContactName"></au-kendo-grid-col>
