fix(templating): add overrideContext

--- a/sample/src/grid/test.html
+++ b/sample/src/grid/test.html
@@ -7,7 +7,7 @@
               <div class='customer-name'>${ContactName}</div>
             </au-kendo-grid-col>
             <au-kendo-grid-col title="Company Name" field="CompanyName">
-              <button au-kendo-button class="k-primary">Test</button>
+              <button au-kendo-button class="k-primary" click.delegate="test()">Test</button>
             </au-kendo-grid-col>
           </au-kendo-grid>
         </collapse-panel>
