feat(grid): enable pagination

--- a/sample/src/grid/basic-use.html
+++ b/sample/src/grid/basic-use.html
@@ -1,16 +1,16 @@
 <template>
     <section>
         <collapse-panel title="Basic use" allow-collapse.bind="false">
-<au-kendo-grid data-source.bind="datasource" auto-bind.bind="false" pageable.bind="true" sortable.bind="true">
-  <au-kendo-grid-col title="Contact Name" field="ContactName">
-    <div class='customer-photo' css="background-image: url(http://demos.telerik.com/kendo-ui/content/web/Customers/${CustomerID}.jpg);"></div>
-    <div class='customer-name'>${ContactName}</div>
-  </au-kendo-grid-col>
-  <au-kendo-grid-col title="Contact Name" field="ContactName"></au-kendo-grid-col>
-  <au-kendo-grid-col title="Contact Title" field="ContactTitle"></au-kendo-grid-col>
-  <au-kendo-grid-col title="Company Name" field="CompanyName"></au-kendo-grid-col>
-  <au-kendo-grid-col field="Country"></au-kendo-grid-col>
-</au-kendo-grid>
+          <au-kendo-grid data-source.bind="datasource" auto-bind.bind="false" pageable.bind="pageable" sortable.bind="true">
+            <au-kendo-grid-col title="Contact Name" field="ContactName">
+              <div class='customer-photo' css="background-image: url(http://demos.telerik.com/kendo-ui/content/web/Customers/${CustomerID}.jpg);"></div>
+              <div class='customer-name'>${ContactName}</div>
+            </au-kendo-grid-col>
+            <au-kendo-grid-col title="Contact Name" field="ContactName"></au-kendo-grid-col>
+            <au-kendo-grid-col title="Contact Title" field="ContactTitle"></au-kendo-grid-col>
+            <au-kendo-grid-col title="Company Name" field="CompanyName"></au-kendo-grid-col>
+            <au-kendo-grid-col field="Country"></au-kendo-grid-col>
+          </au-kendo-grid>
         </collapse-panel>
 
         <collapse-panel title="Code Preview">
@@ -21,9 +21,9 @@
                 </ul>
                 <div>
                   <au-code language="markup">
-                    <au-kendo-grid data-source.bind="datasource" auto-bind.bind="false" pageable.bind="true" sortable.bind="true">
+                    <au-kendo-grid data-source.bind="datasource" auto-bind.bind="false" pageable.bind="pageable" sortable.bind="true">
                       <au-kendo-grid-col title="Contact Name" field="ContactName">
-                        <div class='customer-photo' css="background-image: url(http://demos.telerik.com/kendo-ui/content/web/Customers/${$item.CustomerID}.jpg);"></div>
+                        <div class='customer-photo' css="background-image: url(http://demos.telerik.com/kendo-ui/content/web/Customers/${CustomerID}.jpg);"></div>
                         <div class='customer-name'>${ContactName}</div>
                       </au-kendo-grid-col>
                       <au-kendo-grid-col title="Contact Name" field="ContactName"></au-kendo-grid-col>
@@ -36,15 +36,20 @@
                 <div>
                     <au-code language="javascript">
                       export class BasicUse {
-                        datasource;
+
+                        pageable = {
+                          refresh: true,
+                          pageSizes: true,
+                          buttonCount: 5
+                        };
 
                         constructor() {
                           this.datasource = {
                             type: "odata",
-                            serverFiltering: true,
                             transport: {
-                              read: "//demos.telerik.com/kendo-ui/service/Northwind.svc/Customers"
-                            }
+                                read: "//demos.telerik.com/kendo-ui/service/Northwind.svc/Customers"
+                            },
+                            pageSize: 20
                           };
                         }
                       }
