refactor(grid): rename au-col

--- a/sample/src/grid/basic-use.html
+++ b/sample/src/grid/basic-use.html
@@ -22,14 +22,14 @@
                 <div>
                   <au-code language="markup">
                     <au-kendo-grid data-source.bind="datasource" auto-bind.bind="false" pageable.bind="pageable" sortable.bind="true">
-                      <au-kendo-grid-col title="Contact Name" field="ContactName">
+                      <au-col title="Contact Name" field="ContactName">
                         <div class='customer-photo' css="background-image: url(http://demos.telerik.com/kendo-ui/content/web/Customers/${CustomerID}.jpg);"></div>
                         <div class='customer-name'>${ContactName}</div>
-                      </au-kendo-grid-col>
-                      <au-kendo-grid-col title="Contact Name" field="ContactName"></au-kendo-grid-col>
-                      <au-kendo-grid-col title="Contact Title" field="ContactTitle"></au-kendo-grid-col>
-                      <au-kendo-grid-col title="Company Name" field="CompanyName"></au-kendo-grid-col>
-                      <au-kendo-grid-col field="Country"></au-kendo-grid-col>
+                      </au-col>
+                      <au-col title="Contact Name" field="ContactName"></au-col>
+                      <au-col title="Contact Title" field="ContactTitle"></au-col>
+                      <au-col title="Company Name" field="CompanyName"></au-col>
+                      <au-col field="Country"></au-col>
                     </au-kendo-grid>
                   </au-code>
                 </div>
