--- a/sample/src/grid/binding-to-remote-data.html
+++ b/sample/src/grid/binding-to-remote-data.html
@@ -2,11 +2,11 @@
     <section>
         <collapse-panel title="Binding to remote data" allow-collapse.bind="false">
           <au-kendo-grid data-source.bind="datasource" pageable.bind="true" filterable.bind="true" sortable.bind="true" height.bind="550">
-            <au-kendo-grid-col title="OrderId" field="OrderID"></au-kendo-grid-col>
-            <au-kendo-grid-col field="Freight"></au-kendo-grid-col>
-            <au-kendo-grid-col title="Order Date" field="OrderDate" format="{0:MM/dd/yyyy}"></au-kendo-grid-col>
-            <au-kendo-grid-col title="Ship Name" field="ShipName"></au-kendo-grid-col>
-            <au-kendo-grid-col title="Ship City" field="ShipCity"></au-kendo-grid-col>
+            <au-col title="OrderId" field="OrderID"></au-col>
+            <au-col field="Freight"></au-col>
+            <au-col title="Order Date" field="OrderDate" format="{0:MM/dd/yyyy}"></au-col>
+            <au-col title="Ship Name" field="ShipName"></au-col>
+            <au-col title="Ship City" field="ShipCity"></au-col>
           </au-kendo-grid>
         </collapse-panel>
 
@@ -19,11 +19,11 @@
                  <div>
                     <au-code language="markup">
                       <au-kendo-grid data-source.bind="datasource" pageable.bind="true" filterable.bind="true" sortable.bind="true" height.bind="550">
-                        <au-kendo-grid-col title="OrderId" field="OrderID"></au-kendo-grid-col>
-                        <au-kendo-grid-col field="Freight"></au-kendo-grid-col>
-                        <au-kendo-grid-col title="Order Date" field="OrderDate" format="{0:MM/dd/yyyy}"></au-kendo-grid-col>
-                        <au-kendo-grid-col title="Ship Name" field="ShipName"></au-kendo-grid-col>
-                        <au-kendo-grid-col title="Ship City" field="ShipCity"></au-kendo-grid-col>
+                        <au-col title="OrderId" field="OrderID"></au-col>
+                        <au-col field="Freight"></au-col>
+                        <au-col title="Order Date" field="OrderDate" format="{0:MM/dd/yyyy}"></au-col>
+                        <au-col title="Ship Name" field="ShipName"></au-col>
+                        <au-col title="Ship City" field="ShipCity"></au-col>
                       </au-kendo-grid>
                     </au-code>
                 </div>
