--- a/sample/src/grid/binding-to-websocket.html
+++ b/sample/src/grid/binding-to-websocket.html
@@ -1,6 +1,11 @@
 <template>
     <section>
         <collapse-panel title="Binding to WebSocket" allow-collapse.bind="false">
+          <!-- <au-kendo-grid view-model.ref="grid" toolbar.bind="['create']" auto-bind.bind="false" data-source.bind="datasource" sortable.bind="true" editable.bind="true" height.bind="550">
+            <au-col field="UnitPrice"></au-col>
+            <au-col field="Freight"></au-col>
+            <au-col command="destroy" width="150"></au-col>
+          </au-kendo-grid> -->
         </collapse-panel>
 
         <collapse-panel title="Code Preview">
