Defined autocomplete using normalized input tag

--- a/sample/src/autocomplete/basic-use.html
+++ b/sample/src/autocomplete/basic-use.html
@@ -3,7 +3,7 @@
         <collapse-panel title="Basic use" allow-collapse.bind="false" footer="Current value: ${value}">
             <p><strong>People:</strong></p>
             <p>
-                <input au-kendo-autocomplete="data-source.bind: items;" value.bind="value"></input>
+                <input au-kendo-autocomplete="data-source.bind: items;" value.bind="value">
             </p>
             <p class="text-muted">Type a name, available values in the list are: ${ items } </p>
         </collapse-panel>
@@ -15,7 +15,7 @@
                 </ul>
                 <div>
                     <au-code language="markup">
-                        <input au-kendo-autocomplete="data-source.bind: items;" value.bind="value"></input>
+                        <input au-kendo-autocomplete="data-source.bind: items;" value.bind="value">
                     </au-code>
                 </div>
                 <div>
