--- a/sample/src/grid/working-offline.html
+++ b/sample/src/grid/working-offline.html
@@ -1,6 +1,16 @@
 <template>
     <section>
-        <collapse-panel title="Working online" allow-collapse.bind="false">
+        <collapse-panel title="Working offline" allow-collapse.bind="false">
+
+          <button au-kendo-button class="k-primary" click.delegate="online()">Go online</button>
+          <button au-kendo-button class="k-primary" click.delegate="offline()">Go offline</button>
+
+          <au-kendo-grid data-source.bind="datasource" pageable.bind="{refresh: true}" height="450" toolbar.bind="['create']" editable="inline">
+            <au-col field="ProductName"></au-col>
+            <au-col field="UnitsInStock" title="Units In Stock" width="120px"></au-col>
+            <au-col command="destroy" title="&nbsp;" width="250px"></au-col>
+            <au-col command="update" title="&nbsp;" width="250px"></au-col>
+          </au-kendo-grid>
         </collapse-panel>
 
         <collapse-panel title="Code Preview">
